@@ -2100,4 +2100,10 @@ Titles and Help for the System Fields
 <epp:phrase id="event_queue_fieldname_start_time">Start Time</epp:phrase>
 <epp:phrase id="event_queue_fieldname_hash">Unique Hash</epp:phrase>
 
+<!-- Captcha -->
+
+<epp:phrase id="cgi/register:captcha_failed"><p>The value you entered for the captcha wasn't correct, please try again.</p></epp:phrase>
+<epp:phrase id="user_fieldname_captcha">Captcha Challenge</epp:phrase>
+<epp:phrase id="user_fieldhelp_captcha">To prevent robots from filling in this form you must verify this captcha.</epp:phrase>
+
 </epp:phrases>
