@@ -8347,3 +8347,6 @@ EPRINTS-3.1-beta-2
 2009-07-01 tdb
  * Fixed cloning of eprints/documents/files
 
+2009-07-24 tdb
+ * Added support for a "captcha" field to user registration
+
